bug fix overflow y in skills

--- a/src/scss/Skills.scss
+++ b/src/scss/Skills.scss
@@ -165,6 +165,7 @@
     height: 30rem;
     z-index: 5;
     margin: 0px;
+    overflow-y: scroll;
   }
   
   .card-skills , .card-skills-dark{
